<resources>
    <string name="app_name">P1RJPG</string>
    <string name="TITULO2">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="TITULO3">INGENIERIA EN SISTEMAS COMPUTACIONALES</string>
    <string name="TITULO4">DISPOSITIVOS MOVILES</string>
    <string name="TITULO5">DE LA O MARTINEZ VICTOR HUGO</string>
    <string name="TITULO6">PEREZ GUZMAN ROCIO JOSSELYN</string>
    <string name="TITULO7">7S11</string>
</resources>
